--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "animate.css": "^3.7.2",
     "faker": "^4.1.0",
     "firebase": "^6.3.5",
     "rxjs": "~6.4.0",
